--- a/backend/accounts-service/package.json
+++ b/backend/accounts-service/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/joi": "^17.2.3",
+    "bcryptjs": "^2.4.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
@@ -25,6 +26,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
