--- a/backend/accounts-service/package.json
+++ b/backend/accounts-service/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.8",
     "ts-node": "^10.9.1"
@@ -29,6 +30,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
